<resources>
    <string name="app_name">Care</string>
    <string name="settings_app_name" translatable="false">Care</string>
    <string name="client_name" translatable="false">Client</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_location">Location</string>
    <string name="alphanumeric_postal_code">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 </string>
    <string name="login_button">Login</string>
    <string name="login_continue_button">Continue</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_location_select">Session Location</string>
    <string name="req_star"><![CDATA[<font color=\'#616161\'> * </font>]]></string>
    <string name="warning_dialog_title">Warning</string>
    <string name="warning_lost_data_dialog">Changing the URL, username or password will erase all the data. Are you sure?</string>
    <string name="forgot_button_ok">Dismiss</string>
    <string name="login_offline">Offline</string>
    <string name="login_online">Online</string>
    <string name="login_error">Error with login</string>
    <string name="invalid_URL_message">Invalid URL</string>
    <string name="emptyerror">Required</string>
    <string name="fname_invalid_error">Given name cannot contain symbols or numbers</string>
    <string name="midname_invalid_error">Middle name cannot contain symbols or numbers</string>
    <string name="lname_invalid_error">Family name cannot contain symbols or numbers</string>
    <string name="dob_error">Date should be between %1$s and %2$s</string>
    <string name="reg_firstname_hint">First Name*</string>
    <string name="reg_midname_hint">Middle Name*</string>
    <string name="reg_surname_hint">Family Name*</string>
    <string name="reg_national_id_hint">National ID*</string>
    <string name="patient_national_id_label">National ID</string>
    <string name="reg_neighbourhood_hint">Neighbourhood*</string>
    <string name="reg_governorate_hint">Governorate*</string>
    <string name="national_id_empty_error">National ID is required</string>
    <string name="national_id_invalid_error">National ID must start with 4, 7, 8 or 9 and be 9 digits</string>
    <string name="national_id_checksum_error">Invalid National ID (checksum failed) - please re-check the number</string>
    <string name="duplicate_national_id_dialog_title">Duplicate National ID</string>
    <string name="duplicate_national_id_dialog_message">A patient with this National ID already exists on this device: %1$s. Please verify the ID, or view the existing patient instead.</string>
    <string name="duplicate_national_id_dialog_view_existing">View Existing Patient</string>
    <string name="reg_ques_name">Patient\’s Name</string>
    <string name="reg_ques_gender">Patient\'s gender*</string>
    <string name="reg_ques_dob">Patient\'s birth date*</string>
    <string name="label_or">OR</string>
    <string name="reg_ques_address">Address</string>
    <string name="addr1_hint">Full Address</string>
    <string name="addr2_hint">Address Line 2</string>
    <string name="reg_phone_hint">Phone Number</string>
    <string name="reg_patient_status_hint">Patient Status</string>
    <string name="phone_invalid_error">Phone number must be exactly 10 digits</string>
    <string name="phone_numeric_only_error">Only numbers are allowed</string>
    <string name="addr_invalid_error">Address cannot contain invalid characters</string>
    <string name="atleastone">Fill at least one address field</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob_hint">Date of Birth (dd/MM/yyyy)</string>
    <string name="estyr">Estimated Years</string>
    <string name="estmonth">Estimated Months</string>
    <string name="age_out_of_bounds_message">Patient\'s age must be between 0 and %d</string>
    <string name="register_patient_error">Patient cannot be registered due to server error</string>
    <string name="update_patient_success">Patient %s updated</string>
    <string name="update_patient_error">Patient %s cannot be updated due to server error</string>
    <string name="offline_mode_unsupported_in_first_login">Offline mode is not supported during first login.Enable online mode and then try again.</string>
    <string name="login_offline_toast_message">You are now in offline mode.</string>
    <string name="auth_failed_dialog_message">Incorrect username or password entered. Please try again.</string>
    <string name="no_internet_conn_dialog_message">You have no internet connection.\nPlease check phone or Wi-Fi connection and signal strength and try again.</string>
    <string name="similar_patients_dialog_title">Similar patients found</string>
    <string name="logout_dialog_title">Logging out</string>
    <string name="logout_dialog_message">Are you sure you want to logout from Care?</string>
    <string name="logout_dialog_button">Logout</string>
    <string name="credentials_changed_dialog_title">Credentials changed</string>
    <string name="credentials_changed_dialog_message">Your credentials have been changed in the web app. You are logged out automatically.</string>
    <string name="end_visit_dialog_title">End Visit</string>
    <string name="end_visit_dialog_message">Are you sure you want to end this visit?</string>
    <string name="start_visit_dialog_title">Start Visit</string>
    <string name="start_visit_dialog_message">Are you sure you want to start visit for %1$s now?</string>
    <string name="start_visit_unsuccessful_dialog_title">Visit didn\'t start.</string>
    <string name="start_visit_unsuccessful_dialog_message">There are already active visits of %1$s. Try synchronizing patient or closing previous visits</string>
    <string name="delete_patient_dialog_message">Are you sure you want to delete this patient?</string>
    <string name="location_dialog_title">Select Location</string>
    <string name="location_dialog_current_location">Current Location: </string>
    <string name="location_dialog_no_selection_error">Please select a location</string>
    <string name="reset_dialog_message">All patient information entered will be erased</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_confirm">Confirm</string>
    <string name="dialog_button_register_new">Register new</string>
    <string name="dialog_button_merge">Merge</string>
    <string name="action_next">Next</string>
    <string name="dialog_button_select_location">Select Location</string>
    <string name="settings_logs">Logs</string>
    <string name="settings_concepts_in_db">Concepts in DB:</string>
    <string name="settings_no_concepts_toast">There are no concepts in DB!</string>
    <string name="action_find_patients">Find Patients</string>
    <string name="action_synced_patients">Synced Patients</string>
    <string name="action_download_patients">Download Patients</string>
    <string name="search_patient_hint">Patient name</string>
    <string name="search_patient_no_results">No patients exist in database</string>
    <string name="search_patient_no_result_for_query">No results found for query \"%1$s\"</string>
    <string name="select_all_downloadable_data">Select all</string>
    <string name="download_selected_patient_data">Download Patient Data</string>
    <string name="download_multiple">Download Multiple</string>
    <string name="dashboard_search_icon_label">Find Patients</string>
    <string name="dashboard_registry_icon_label">Register Patient</string>
    <string name="dashboard_visits_icon_label">Active Visits</string>
    <string name="dashboard_forms_icon_label">Form Entry</string>
    <string name="dashboard_exit_toast_message">Please press BACK again to exit</string>
    <string name="find_patients_row_checkbox_download_label">Download</string>
    <string name="action_synchronize_patients">Synchronizing patient</string>
    <string name="action_update_patient_data">Update Patient</string>
    <string name="synchronize_patient_successful">Successfully synchronized patient data.</string>
    <string name="synchronize_patient_error">Synchronizing patient data was unsuccessful</string>
    <string name="synchronize_patient_network_error">Cannot synchronize in offline mode</string>
    <string name="delete_patient_successful">Patient deleted successfully</string>
    <string name="delete_patient_error">Error with deleting patient</string>
    <string name="get_patient_from_database_error">Failed to fetch patient from database</string>
    <string name="action_start_visit">Start visit</string>
    <string name="action_create_allergy">Create Allergy</string>
    <string name="patient_scroll_tab_details_label">Details</string>
    <string name="patient_scroll_tab_allergy_label">Allergy</string>
    <string name="patient_scroll_tab_diagnosis_label">Diagnosis</string>
    <string name="patient_scroll_tab_visits_label">Visits</string>
    <string name="patient_scroll_tab_vitals_label">Vitals</string>
    <string name="patient_scroll_tab_charts_label">Charts</string>
    <string name="patient_scroll_tab_appointments_label">Appointments</string>
    <string name="patient_scroll_tab_medications_label">Medications</string>
    <string name="patient_scroll_tab_orders_label">Orders</string>
    <string name="download_started">"Downloading…"</string>
    <string name="action_starting_visit">"Starting Visit"</string>
    <string name="visit_start_error">Failed to start a visit</string>
    <string name="appointments_tab_upcoming">Upcoming</string>
    <string name="appointments_tab_today">Today</string>
    <string name="appointments_tab_past">Past</string>
    <string name="empty_appointments_list">No appointments to display.</string>
    <string name="location">Location</string>
    <string name="service">Service</string>
    <string name="provider">Provider</string>
    <string name="notes">Notes</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="duration_minutes">Duration (minutes)</string>
    <string name="appointment_type_label">Appointment type</string>
    <string name="appointment_time_label">Appointment time</string>
    <string name="recurring_appointment_label">Recurring appointment</string>
    <string name="recurring_period_day">Day</string>
    <string name="recurring_period_week">Week</string>
    <string name="recurring_repeat_every">Repeat every</string>
    <string name="recurring_end_date_label">Recurring end date</string>
    <string name="date_appointment_issued_label">Date appointment issued</string>
    <string name="empty_orders_list">No orders to display for today.</string>
    <string name="medications_section_active">Active Medications</string>
    <string name="medications_section_upcoming">Upcoming Medications</string>
    <string name="medications_section_past">Past Medications</string>
    <string name="medications_empty_active">There are no active medications to display.</string>
    <string name="medications_empty_upcoming">There are no upcoming medications to display.</string>
    <string name="medications_empty_past">There are no past medications to display.</string>
    <string name="drug_search_clear_results">Clear Results</string>
    <string name="drug_search_hint">Search for a drug</string>
    <string name="additional_instructions">Additional instructions</string>
    <string name="test">Test</string>
    <string name="test_order_priority">Priority</string>
    <string name="test_order_accession_number">Reference number</string>
    <string name="appointment_status_label">Appointment status</string>
    <string name="action_submit">Submit</string>
    <string name="add_comment">Add a comment</string>
</resources>