<?xml version="1.0" encoding="utf-8"?><!--
  ~ The contents of this file are subject to the OpenMRS Public License
  ~ Version 1.0 (the "License"); you may not use this file except in
  ~ compliance with the License. You may obtain a copy of the License at
  ~ http://license.openmrs.org
  ~
  ~ Software distributed under the License is distributed on an "AS IS"
  ~ basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing rights and limitations
  ~ under the License.
  ~
  ~ Copyright (C) OpenMRS, LLC.  All Rights Reserved.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_small">

        <TextView
            android:id="@+id/activeMedicationsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_short"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_short"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/medications_section_active"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activeMedicationsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />

        <TextView
            android:id="@+id/emptyActiveMedications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_short"
            android:layout_marginEnd="@dimen/margin_short"
            android:text="@string/medications_empty_active"
            android:visibility="gone" />

        <TextView
            android:id="@+id/upcomingMedicationsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_short"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_short"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/medications_section_upcoming"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcomingMedicationsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />

        <TextView
            android:id="@+id/emptyUpcomingMedications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_short"
            android:layout_marginEnd="@dimen/margin_short"
            android:text="@string/medications_empty_upcoming"
            android:visibility="gone" />

        <TextView
            android:id="@+id/pastMedicationsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_short"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_short"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/medications_section_past"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pastMedicationsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />

        <TextView
            android:id="@+id/emptyPastMedications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_short"
            android:layout_marginEnd="@dimen/margin_short"
            android:text="@string/medications_empty_past"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>
